--- a/oszika/index.html
+++ b/oszika/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<button class="scrollbutton" data-scroll="#somethingonpage">something on page</button>
 
 <style>
 #naslov {
@@ -206,9 +207,21 @@ margin-top: -45px;
 		
 		</style>
 		
+		
+		<style>
+		
+		#mejn {
+		
+		margin-right: 300px;
+		
+		}
+		
+		
+		</style>
+		
         <section id="choose" class="choose">
             <div class="container-fluid">
-                <div class="row">
+                <div id="mejn" class="row">
                     <div class="main_choose_area sections">
                         <div class="col-sm-7 col-sm-offset-1">
                             <div class="main_choose_content text-left">
