Promenjena glavna slika

--- a/oszika/index.html
+++ b/oszika/index.html
@@ -86,7 +86,6 @@ margin-top: -45px;
 
 
 
-
         <section id="home" class="home">
             <div class="overlay">
                 <div class="container">
@@ -108,7 +107,7 @@ margin-top: -45px;
                                 </div>
                                 <div class="single_home_slider">
                                     <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                        <h1>ŠKOLA KOJA DAJE</h1>
+                                        <h1>SKOLA KOJA DAJE</h1>
                                         <p class="subtitle">Trudimo se da pristupimo svakom uceniku najbolje sto mozemo..</p>
 
                  
@@ -394,7 +393,7 @@ margin-top: -45px;
             <div class="container">
                 <div class="row">
                     <div class="main_contact sections">
-                        <div class="head_title text-center">
+                        <div id ="go" class="head_title text-center">
                             <h2>KONTAKTIRAJTE NAS</h2>
                             <p>OS ZIKA POPOVIC VLADIMIRCI</p>
                         </div>
@@ -407,13 +406,13 @@ margin-top: -45px;
                                     </div>
                                 </div>
 
-<style>
+                       <style>
 
-#adresa {
-margin-left: 375px;
-}
+                         #adresa {
+                         margin-left: 375px;
+                            }
 
-</style>
+                       </style>
 								
                                 <div name = "kontakt" id="kontakt" class="col-sm-5 col-sm-offset-1 col-xs-12">
                                     <div class="single_message_right_info">
