--- a/oszika/index.html
+++ b/oszika/index.html
@@ -107,8 +107,12 @@ margin-top: -45px;
                                 </div>
                                 <div class="single_home_slider">
                                     <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                        <h1>SKOLA KOJA DAJE</h1>
-                                        <p class="subtitle">Trudimo se da pristupimo svakom uceniku najbolje sto mozemo..</p>
+                                        <h1>Grade school <br>
+										ZIKA POPOVIC VLADIMIRCI</h1>
+                                        <p class="subtitle">oszikapopovicvl@gmail.com</p>
+										<div class="home_btn">
+                                            <a href="#kontakt" class="btn btn-md">Contact us</a>
+                                        </div>
 
                  
 
@@ -216,7 +220,7 @@ margin-top: -45px;
                                     <h1 id="iskustvo"> Zabavno iskustvo <br> koje ukljucuje ucenje </h1>
 						
 
-                                    <a id="iskustvo" href="" class="btn btn-larg">NADJI NAS <i class="lnr lnr-arrow-right"></i></a>
+                                    <a id="iskustvo" href="#kontakt" class="btn btn-larg">NADJI NAS <i class="lnr lnr-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
